2007-09-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala: refactor emit method

2007-09-27  Jürg Billeter  <j@bitron.ch>

	* vala/valacodebinding.vala, vala/valasemanticanalyzer.vala,
	  gobject/Makefile.am, gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodeexpressionbinding.vala,
	  gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorassignment.vala,
	  gobject/valaccodegeneratorclass.vala,
	  gobject/valaccodegeneratorsignal.vala: add CCodeExpressionBinding and
	  CCodeAssignmentBinding classes and move relevant code from
	  CCodeGenerator to CCodeAssignmentBinding

2007-09-26  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: support # comment lines in .metadata
	  files, based on patch by Andrea Del Signore

2007-09-26  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala, vala/valacodegenerator.vala: fix crash
	  when using libvala without a code generator

2007-09-26  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valainterfacewriter.vala: support custom
	  cname for classes, based on patch by Andrea Del Signore

2007-09-21  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorclass.vala: prepare support for classes
	  based on GTypeInstance but not on GObject
	* tests/classes.exp, tests/classes.vala: add simple test cases for
	  GTypeInstance-based classes

2007-09-21  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorclass.vala: add missing parent field for
	  derived non-GObject classes

2007-09-20  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/valasemanticanalyzer.vala, gobject/valaccodegenerator.vala:
	  Fix memory leak with non reference counting reference types in
	  property getters, now we enforce an explicit ownership transfer in
	  such a case,  fixes bug 472904

2007-09-20  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/vala.h, vala/valacodecontext.vala,
	  vala/valacodegenerator.vala, gobject/Makefile.am,